Fixes PackageExplorer flickering
when hovered over the name or toggled in the tree menu

--- a/ui/package-explorer.reel/package-explorer.css
+++ b/ui/package-explorer.reel/package-explorer.css
@@ -1,6 +1,7 @@
 
 .PackageExplorer {
     border-right: 1px solid hsl(0,0%,75%);
+    -webkit-backface-visibility: hidden; /* Fixes flickering when hovering the name or toggle the tree menu */
 }
 
 .PackageExplorer .Panel-shadow {
